Changes in top level CVS tree (please add your changes at the very top of
the file):

------------------------------------------------------------------------------
Change for 0.95.4:

Add better comment in config.h about the DM_MAIL option - msw.

Fixed and doc/playbook/Makefile.in doc/spoiler/Makefile.in so it works with
autoconf setup.

Updated to properly generated handbook.ps when needed - msw

doc/crossfire.doc: Updated with disease code notes, detector notes.

crossedit:  Fix in edit.c to ensure map objects (mainly is_floor objects)
are actually removed visually as well as from a pure object standpoint.

Change to save_throw_object:  If object is in players inventory and
is destroyed, send update to client.  This can happen when trying to
ignite something in the inventory with flint and steel - msw.

In apply_lighter, do more accurate check when seeing if the attempted
object was actually destroyed.  Also, cache the item name so that if
it is destroyed, we have a proper name to print out. - msw

fireborns changed to have Pow stat bonus instead of Wis
stat bonus.  --PeterM

Some problems in the random map code fixed: specificially,
  1)  fountains no longer attempted placement outside map
  2)  Ignore files/dirs named CVS when looking for styles.

I changed a few of the maps to have exits to random maps.
I made one random house in Scorn, one random exit in the Hall of Bones
to an undead maze, another exit to a random map in the hole SE of
Scorn, and one in the bottom of the Tower of the Stars. --PeterM


Update lib/Makefile.in to create empty bookarch and temp.maps files as
part of install process. - msw

Change configure.in script so that by default, files will be put in
installdir/var/crossfire and installdir/share/crossfire instead of
just installdir/var and installdir/share.  This allows crossfire to be
installed more cleaning without it having its own top level directory.
Old installation behaviour can be gained by using --enable-old-layout when